Fix button icons alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,6 +48,8 @@ $shadow-z18: rgba(0, 0, 0, 0.2) 0px 9px 11px -5px,
   cursor: pointer;
   box-shadow: $shadow-z1;
   transition: all 0.3s;
+  display: grid;
+  place-content: center;
   &:hover {
     box-shadow: $shadow-z4;
   }
